src/utils/sak/src/cmds/compile_post/tests/err-overwritten-ref/expected.stderr
[31merror:[0m ref overwrites another ref
   ╭─[input:5:9]
   │
 1 │ <ref id="a">
   │         ─┬─  
   │          ╰─── ref defined here before
   │ 
 5 │ <ref id="a">
   │         ─┬─  
   │          ╰─── ref overwrites another ref
───╯

compilation failed
